--- a/aula-5-ciclos-iteracoes/for.html
+++ b/aula-5-ciclos-iteracoes/for.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciclos e Iterações - Javascript </title>
+    <title>For Loop - Javascript </title>
 </head>
 <body>
    
-    <script src="script.js"></script>
+    <script src="for.js"></script>
 </body>
 </html>
